# git-nexus

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  MIGRATION.md  README.md  TASKS.md  app.py  config.py  models.py  pyproject.toml
app/: __init__.py  models.py  services.py
app/routes/: api.py  main.py
backend/: .env.example  alembic.ini  check_db.py  config.py  constants.py  database.py  main.py  pyproject.toml  schemas.py
backend/adapters/: __init__.py  base.py  static_html.py
backend/alembic/: env.py
backend/alembic/versions/: 75f9b96eed97_add_sort_order_column.py
backend/models/: __init__.py  cache.py  config.py  envvar.py  github.py  log.py  release.py  replay.py  watchlist.py
backend/routers/: __init__.py  discovery.py  envvars.py  replay.py  settings.py  watchlist.py
backend/services/: __init__.py  cache_service.py  env_service.py  git_service.py  github_service.py  release_cache_service.py  server_service.py  token_service.py  workspace_service.py
backend/tests/: __init__.py  conftest.py  security_verification.py  test_api.py  test_critical_fixes.py  test_services.py
backend/utils/: crypto.py  logger.py  security.py
docs/: index.css  index.html  index.js
docs/demo/: demo.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
static/css/: filters.css  graph.css  header.css  modals.css  profile.css  repo.css  repos.css  settings.css  style.css  theme.css  watchlist.css
static/js/: api.js  main.js  script.js  settings.js  (+3 more)
templates/: index.html  settings.html  watchlist.html
(+53 files in other folders)
